--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,144 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.ipr.jp</groupId>
   <artifactId>ipr-jp</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>${ipr-jp.version}</version>
   <packaging>pom</packaging>
+  <properties>
+  		<ipr-jp.version>1.0.0-SNAPSHOT</ipr-jp.version>
+  		<spring.version>4.1.2.RELEASE</spring.version>
+  		<aspectj.version>1.8.9</aspectj.version>
+  		<log4j.version>1.2.17</log4j.version>
+  		<slf4j.version>1.7.9</slf4j.version>
+  		<jar.source>1.7</jar.source>
+        <jar.target>1.7</jar.target>
+  		<alibaba.fastjson.version>1.2.29</alibaba.fastjson.version>
+  		<servlet.version>3.0.1</servlet.version>
+  </properties>
+  
+  <dependencyManagement>
+		<dependencies>
+			<!-- my project -->
+			<dependency>
+				<groupId>com.ipr.jp</groupId>
+				<artifactId>ipr-jp-biz</artifactId>
+				<version>${ipr-jp.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.ipr.jp</groupId>
+				<artifactId>ipr-jp-common</artifactId>
+				<version>${ipr-jp.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.ipr.jp</groupId>
+				<artifactId>ipr-jp-dao</artifactId>
+				<version>${ipr-jp.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.ipr.jp</groupId>
+				<artifactId>ipr-jp-intergrate</artifactId>
+				<version>${ipr-jp.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.ipr.jp</groupId>
+				<artifactId>ipr-jp-service</artifactId>
+				<version>${ipr-jp.version}</version>
+			</dependency>
+		 	<!-- Spring dependencies -->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-core</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-web</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-beans</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-expression</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-webmvc</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-tx</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context-support</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-jdbc</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-test</artifactId>
+                <version>${spring.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-aop</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <!-- aspect -->
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjweaver</artifactId>
+                <version>${aspectj.version}</version>
+            </dependency>
+            <!-- logger -->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>jcl-over-slf4j</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${alibaba.fastjson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>${servlet.version}</version>
+            </dependency>
+		</dependencies>
+  </dependencyManagement>
   <modules>
     <module>ipr-jp-common</module>
     <module>ipr-jp-biz</module>
