--- a/ipr-jp-intergrate/pom.xml
+++ b/ipr-jp-intergrate/pom.xml
@@ -7,9 +7,7 @@
     <artifactId>ipr-jp</artifactId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
-  <groupId>com.ipr.jp</groupId>
   <artifactId>ipr-jp-intergrate</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
   <name>ipr-jp-intergrate</name>
   <url>http://maven.apache.org</url>
   <properties>
@@ -21,6 +19,10 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+    	<groupId>com.ipr.jp</groupId>
+    	<artifactId>ipr-jp-common</artifactId>
     </dependency>
   </dependencies>
 </project>
