--- a/ipr-jp-service/pom.xml
+++ b/ipr-jp-service/pom.xml
@@ -5,11 +5,9 @@
   <parent>
     <groupId>com.ipr.jp</groupId>
     <artifactId>ipr-jp</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>${ipr-jp.version}</version>
   </parent>
-  <groupId>com.ipr.jp</groupId>
   <artifactId>ipr-jp-service</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
   <name>ipr-jp-service</name>
   <url>http://maven.apache.org</url>
   <properties>
@@ -21,6 +19,10 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+    	<groupId>com.ipr.jp</groupId>
+    	<artifactId>ipr-jp-biz</artifactId>
     </dependency>
   </dependencies>
 </project>
