--- a/ipr-jp-web/src/main/webapp/WEB-INF/web.xml
+++ b/ipr-jp-web/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,34 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<web-app
+        version="3.0"
+        xmlns="http://java.sun.com/xml/ns/javaee">
+  <!-- log4j -->
+  <context-param>
+	  <param-name>log4jConfigLocation</param-name>
+	  <param-value>classpath:config/log4j.xml</param-value>
+  </context-param>
+  <listener>
+  	  <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+  </listener>
+  <context-param>
+	  <param-name>contextConfigLocation</param-name>
+	  <param-value>classpath:config/applicationContext.xml</param-value>
+  </context-param>
+  <listener>
+ 	  <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
+  <servlet>
+        <servlet-name>spring</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <!-- 可以自定义servlet.xml配置文件的位置和名称，默认为WEB-INF目录下，名称为[<servlet-name>]-servlet.xml，如spring-servlet.xml -->
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>classpath:config/spring-servlet.xml</param-value>
+        </init-param>
 
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>spring</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
 </web-app>
