--- a/ipr-jp-test/pom.xml
+++ b/ipr-jp-test/pom.xml
@@ -14,11 +14,23 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
+     <dependency>
+	     <groupId>junit</groupId>
+	     <artifactId>junit</artifactId>
+	     <scope>test</scope>
+     </dependency>
+     <dependency>
+         <groupId>org.mockito</groupId>
+         <artifactId>mockito-core</artifactId>
+     </dependency>
+     <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-test</artifactId>
+        <scope>test</scope>
+    </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+    	<groupId>com.ipr.jp</groupId>
+    	<artifactId>ipr-jp-service</artifactId>
     </dependency>
   </dependencies>
 </project>
