--- a/ipr-jp-biz/pom.xml
+++ b/ipr-jp-biz/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.ipr.jp</groupId>
     <artifactId>ipr-jp</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>${ipr-jp.version}</version>
   </parent>
   <artifactId>ipr-jp-biz</artifactId>
   <name>ipr-jp-biz</name>
@@ -14,12 +14,6 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
     <dependency>
     	<groupId>com.ipr.jp</groupId>
     	<artifactId>ipr-jp-common</artifactId>
