--- a/ipr-jp-common/pom.xml
+++ b/ipr-jp-common/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.ipr.jp</groupId>
     <artifactId>ipr-jp</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>${ipr-jp.version}</version>
   </parent>
   <artifactId>ipr-jp-common</artifactId>
   <name>ipr-jp-common</name>
@@ -14,13 +14,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
+    		<dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-core</artifactId>
             </dependency>
